# developerkit

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  lifespan.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: endpoints.py  health.py  ingest.py  requests.py  stream.py
backend/app/core/: config.py  constants.py  errors.py  logging.py
backend/app/db/: pool.py  schema.sql
backend/app/db/queries/: cleanup.sql  endpoints.sql  requests.sql
backend/app/schemas/: common.py  endpoints.py  requests.py  stream.py
backend/app/services/: cleanup_service.py  endpoint_service.py  request_service.py  stream_hub.py
backend/app/utils/: body_reader.py  headers.py  ids.py  json_parse.py  time.py
backend/tests/: conftest.py  test_endpoints.py  test_health.py  test_ingest.py  test_requests_api.py  test_sse.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/scripts/: generate-sitemap.mjs  prerender-landing.mjs
frontend/src/: entry-client.tsx  entry-server.tsx  main.tsx
frontend/src/app/: App.tsx  AppProviders.tsx  route-config.tsx
frontend/src/config/: site.ts  tools.ts
frontend/src/lib/: clipboard.ts  format.ts  id.ts  seo.ts
frontend/src/pages/: Base64EncoderDecoderPage.tsx  CronExpressionParserPage.tsx  CsvToJsonPage.tsx  CurlToFetchPage.tsx  EnvParserPage.tsx  HmacGeneratorPage.tsx  (+17 more)
(+47 files in other folders)
