[project]
name = "webhooktester-backend"
version = "0.1.0"
description = "FastAPI backend for temporary webhook testing and request inspection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "orjson>=3.10.0,<4.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

